update router
