# packend/swagger/authSwagger.yaml
@@ -230,11 +230,16 @@ paths:
               example:
                 error: 'Email not verified'
         '404':
-          description: Invalid credentials
+          description: Invalid credentials or missing user information
           content:
             application/json:
-              example:
-                error: 'password or Email is not exist'
+              examples:
+                invalid_credentials:
+                  value:
+                    error: 'password or Email is not exist'
+                missing_info:
+                  value:
+                    error: 'User information is NOT exist '
 
   /api/auth/forgotPassword:
     post:
@@ -339,8 +344,8 @@ paths:
           example: 'univ'
           schema:
             type: string
-            enum: [univ, major, Spercialty, subject]
-          description: 'Search mode ("univ", "major", "Spercialty", "subject")'
+            enum: [univ, major, specialty, subject]
+          description: 'Search mode ("univ", "major", "specialty", "subject")'
         - name: name
           in: query
           required: true
@@ -359,7 +364,7 @@ paths:
           example: 'Computer Science'
           schema:
             type: string
-          description: Major name (required if mode is Spercialty or subject)
+          description: Major name (required if mode is specialty or subject)
         - name: specialization
           in: query
           example: 'Software Engineering'
@@ -380,7 +385,7 @@ paths:
                 majors:
                   - 'Computer Science'
                   - 'Data Science'
-                Spercialty:
+                specialty:
                   - 'SOFTWARE ENGINEERING'
                   - 'ARTIFICIAL INTELLIGENCE'
                 subject:
@@ -424,8 +429,16 @@ paths:
         '401':
           description: Unauthorized
         '404':
-          description: Error with requested data
+          description: Error with requested data (university does not exist, info not valid, or info already added)
           content:
             application/json:
-              example:
-                message: 'university is not exist'
+              examples:
+                univ_not_exist:
+                  value:
+                    message: 'university is not exist'
+                info_not_exist:
+                  value:
+                    message: 'you are not added this information'
+                info_already_exist:
+                  value:
+                    message: 'you added information is already exist'
